# ratatui-image

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  README.tpl  build.rs  flake.nix  release-plz.toml  screenshot-tests.nix
.github/workflows/: ci.yaml  fast-forward.yml  pull_request.yml  release-plz.yml  release.yml  screenshots.yaml
benches/: encode.rs  protocols.rs
examples/: async.rs  screenshot.rs  sliced.rs  thread.rs  tokio.rs
examples/demo/: crossterm.rs  main.rs  termion.rs  termwiz.rs
src/: errors.rs  lib.rs  picker.rs  protocol.rs  sliced.rs  thread.rs
src/backend/: kitty.rs  mod.rs  picker.rs
src/backend/halfblocks/: mod.rs  resizeable.rs
src/backend/sixel/: mod.rs  resizeable.rs
src/picker/: cap_parser.rs
src/protocol/: halfblocks.rs  iterm2.rs  kitty.rs  mod.rs  sixel.rs
src/protocol/halfblocks/: chafa.rs  chafa_libload.rs  chafa_linked.rs  chafa_static.rs  primitive.rs
src/protocol/snapshots/: ratatui_image__protocol__halfblocks__tests__chafa.snap  ratatui_image__protocol__halfblocks__tests__halfblocks.snap
src/thread/: mod.rs
