[package]
name = "ratatui-image"
version = "1.0.5"
edition = "2021"
autoexamples = true
authors = ["Benjamin Große <ste3ls@gmail.com>"]
description = "An image widget for ratatui, supporting sixels and unicode-halfblocks"
keywords = ["ratatui", "image", "sixel", "kitty", "tui"]
repository = "https://github.com/benjajaja/ratatui-image"
homepage = "https://github.com/benjajaja/ratatui-image"
readme = "README.md"
license = "MIT"
exclude = [
  "assets/*",
]
rust-version = "1.74.0"

[features]
default = ["image-defaults", "rustix"]
crossterm = ["ratatui/crossterm"]
image-defaults = ["image/default"]
termion = ["ratatui/termion"]
termwiz = ["ratatui/termwiz"]
serde = ["dep:serde"]
rustix = ["dep:rustix"]

[dependencies]
dyn-clone = "^1.0.11"
image = { version = "^0.25.1", default-features = false, features = ["jpeg"] }
icy_sixel = { version = "^0.1.1" }
serde = { version = "^1.0", optional = true, features = ["derive"] }
rustix = { version = "^0.38.4", optional = true, features = ["stdio", "termios", "fs"] }
base64 = { version = "^0.21.2" }
rand = { version = "^0.8.5" }
ratatui = { version = "^0.28.1", default-features = false, features = [] }

[[bin]]
name = "ratatui-image"
path = "./src/bin/ratatui-image/main.rs" # cargo readme needs this for some reason
required-features = ["crossterm"]

[[example]]
name = "demo"
# this runs for all of the terminal backends, so it can't be built using --all-features or scraped
doc-scrape-examples = true

[[example]]
name = "screenshot"
required-features = ["crossterm", "rustix"]

[[example]]
name = "async"
required-features = ["crossterm", "rustix"]
