[package]
name = "ratatui-image"
version = "8.0.2"
edition = "2024"
autoexamples = true
authors = ["Benjamin Große <ste3ls@gmail.com>"]
description = "An image widget for ratatui, supporting sixels, kitty, iterm2, and unicode-halfblocks"
keywords = ["ratatui", "image", "sixel", "kitty", "iterm2"]
repository = "https://github.com/benjajaja/ratatui-image"
homepage = "https://github.com/benjajaja/ratatui-image"
readme = "README.md"
license = "MIT"
exclude = ["assets/*"]
rust-version = "1.86.0"

[features]
default = ["image-defaults", "crossterm"]
crossterm = ["ratatui/crossterm"]
image-defaults = ["image/default"]
termion = ["ratatui/termion"]
termwiz = ["ratatui/termwiz"]
serde = ["dep:serde"]
tokio = ["dep:tokio"]
chafa = ["dep:libloading"]

[dependencies]
image = { version = "^0.25.6", default-features = false, features = ["jpeg"] }
icy_sixel = { version = "^0.1.1" }
libloading = { version = "0.8", optional = true }
serde = { version = "^1.0", optional = true, features = ["derive"] }
base64-simd = { version = "0.8" }
rand = { version = "^0.8.5" }
ratatui = { version = "^0.29.0", default-features = false, features = [] }
thiserror = { version = "1.0.59" }
tokio = { version = "1.45.1", default-features = false, optional = true, features = ["sync"]}

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "^0.38.4", features = ["stdio", "termios", "fs"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", default-features = false, features = [
  "std",
  "Win32_System_Console",
  "Win32_Storage_FileSystem",
  "Win32_Security",
] }

[[bin]]
name = "ratatui-image"
path = "./src/bin/ratatui-image/main.rs" # cargo readme needs this for some reason
required-features = ["crossterm"]

[[example]]
name = "demo"
# this runs for all of the terminal backends, so it can't be built using --all-features or scraped
doc-scrape-examples = true

[[example]]
name = "thread"
required-features = ["crossterm"]

[[example]]
name = "tokio"
required-features = ["crossterm", "tokio"]

[dev-dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["macros", "rt", "rt-multi-thread"] }
insta = "1.44.3"

[package.metadata.docs.rs]
features = ["crossterm"]
